# STEMLab-AI

./: .env  .env.example  .gitignore  API_SPECIFICATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEVELOPMENT_ROADMAP.md  FOLDER_STRUCTURE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai_instructor.py  analytics.py  circuit.py  health.py  history.py  physics.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py
backend/app/engines/ai/: gemini_client.py
backend/app/engines/circuit/: ohms_law.py  rc_circuit.py  series_parallel.py
backend/app/engines/physics/: newtons_laws.py  pendulum.py  projectile_motion.py
backend/app/middleware/: error_handler.py  logging_middleware.py  session_middleware.py
backend/app/models/: __init__.py  ai_conversation.py  analytics.py  concept.py  experiment.py  quiz.py  report.py
backend/app/repositories/: analytics_repository.py  base.py  experiment_repository.py
backend/app/schemas/: ai.py  analytics.py  circuit.py  common.py  experiment.py  physics.py
backend/app/services/: analytics_service.py  experiment_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_seed_concepts.py
backend/tests/: conftest.py
backend/tests/integration/: test_health_api.py
backend/tests/unit/: test_health.py
frontend/: .env.local.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts
(+84 files in other folders)
